<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="add">Add</string>
    <string name="add_events">Add Events</string>
    <string name="an_error_occured_while_parsing_blocks_holder_list">An error occured while parsing blocks holder list.</string>
    <string name="an_error_occured_while_parsing_event">An error occured while parsing event.</string>
    <string name="an_error_occured_while_parsing_file_list">An error occured while parsing file list.</string>
    <string name="already_in_use">Already in use</string>
    <string name="app_name">BlockWeb Builder</string>
    <string name="block">Block</string>
    <string name="blocks">Blocks</string>
    <string name="blocks_manager">Blocks manager</string>
    <string name="cancel">Cancel</string>
    <string name="choose_photo">Choose photo</string>
    <string name="create">Create</string>
    <string name="create_new_blocks_holder">Create new blocks holder</string>
    <string name="create_new_file">Create new file</string>
    <string name="create_new_project">Create new project</string>
    <string name="done">Done</string>
    <string name="enter_value">Enter value</string>
    <string name="error">Error</string>
    <string name="file_already_exists">File already exists</string>
    <string name="holder_color">Holder color</string>
    <string name="holder_name_empty_error">Holder name cannot be emptied</string>
    <string name="invalid_color">Invalid color</string>
    <string name="invalid_file_name">Invalid file name</string>
    <string name="invalid_project_name">Invalid project name</string>
    <string name="new_block">New block</string>
    <string name="new_blocks_holder">New Blocks Holder</string>
    <string name="new_file">New file</string>
    <string name="new_holder">New holder</string>
    <string name="no_blocks_holder_yet">No blocks holder yet</string>
    <string name="no_blocks_yet">No Blocks yet</string>
    <string name="no_events_yet">No events yet</string>
    <string name="no_files_yet">No files yet</string>
    <string name="no_projects_yet">No projects yet.</string>
    <string name="package_name">Package name</string>
    <string name="project_name">Project name</string>
    <string name="project_name_not_passed">Project name not passed.Please check the Intent or contact developer.</string>
    <string name="project_not_found">Project not found</string>
    <string name="project_photo">Project Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="settings">Settings</string>
    <string name="show_source_code">Show source code</string>
    <string name="source_code">Source code</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="value_editor">Value editor</string>
    <string name="value_should_not_be_empty">Value should not be empty</string>
</resources>
