<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        android:id="@+id/appbar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:id="@+id/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/loading">

            <ProgressBar
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:indeterminate="true"
                android:id="@+id/progressbar" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/noFilesYet"
            android:visibility="gone">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/no_files_yet" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/permissionDenied">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/storage_permission_denied" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:id="@+id/fileList">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/list" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:id="@+id/error">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/project_name_not_passed" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/plus"
        android:id="@+id/fab"
        android:layout_gravity="end|bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
